--- a/src/app/home/footer/footer.component.css
+++ b/src/app/home/footer/footer.component.css
@@ -1,6 +1,7 @@
 .footer{
-    margin: auto;
-color: blanchedalmond;
+    /* margin: auto; */
+    color: blanchedalmond;
     position: absolute ; 
     bottom: 0;
+    z-index:100;
 }
