--- a/src/app/home/index/index.component.html
+++ b/src/app/home/index/index.component.html
@@ -1,6 +1,6 @@
 <div class="home">
     <div class="text-white about" data-aos="fade-up" data-aos-delay="150">
-        <h1 style="color: orange;">Amalia entertainement events</h1>
+        <h1 style="color: orange;">Amalia entertainement & events</h1>
         <h4 class="text-justify text-center mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ea ab rem quia necessitatibus temporibus labore tempore magni sequi harum doloribus debitis molestiae!</h4>
         <div class="d-flex">
             <a routerLink="/home/about" class="btn btn-danger">Get Started</a>
