behavior subject for avatar of company

--- a/src/app/home/events/card-event/card-event.component.css
+++ b/src/app/home/events/card-event/card-event.component.css
@@ -1,4 +1,5 @@
 .card-content {
+    width: 100%;
     min-height: 750px;
     background: url("/assets/img/Background-image/home-bg.jpg") top center;
     background-size: cover;
