--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -13,7 +13,7 @@
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown" dropdown placement="bottom right" *ngIf="connected">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <img [src]="connected?.photo" class="img-avatar" alt="admin@bootstrapmaster.com"/> {{connected?.email}}
+        <img src="{{avatarImage$ | async}}" class="img-avatar" alt="avatar"/> {{connected?.email}}
       </a>
       <ul class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
