--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,139 +1,1 @@
-<!-- <p class="footer">2021 &copy; all rights reserved</p> -->
-<footer id="dk-footer" class="dk-footer">
-  <div class="container">
-      <div class="row">
-          <div class="col-md-12 col-lg-4" >
-              <div class="dk-footer-box-info">
-                  <!-- <a href="index.html" class="footer-logo">
-                      <img src="images/footer_logo.png" alt="footer_logo" class="img-fluid">
-                  </a> -->
-                  <!-- <p class="footer-info-text">
-                     Reference site about Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.
-                  </p> -->
-                  <div class="footer-social-link">
-                      <h3>Follow us</h3>
-                      <ul>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-facebook"></i>
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-twitter"></i>
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-google-plus"></i>
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-linkedin"></i>
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">
-                                  <i class="fa fa-instagram"></i>
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <!-- End Social link -->
-              </div>
-             
-          </div>
-          <!-- End Col -->
-          <div class="col-md-12 col-lg-8">
-              <div class="row">
-                  <div class="col-md-6">
-                      <div class="contact-us">
-                          <div class="contact-icon">
-                              <i class="fa fa-map-o" aria-hidden="true"></i>
-                          </div>
-                          <!-- End contact Icon -->
-                          <div class="contact-info">
-                              <h3>Amalia entertainement & events </h3>
-                              <p>5353 Road Avenue</p>
-                          </div>
-                          <!-- End Contact Info -->
-                      </div>
-                      <!-- End Contact Us -->
-                  </div>
-                  <!-- End Col -->
-                  <div class="col-md-6">
-                      <div class="contact-us contact-us-last">
-                          <div class="contact-icon">
-                              <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
-                          </div>
-                          <!-- End contact Icon -->
-                          <div class="contact-info">
-                              <h3>95 711 9 5353</h3>
-                              <p>Give us a call</p>
-                          </div>
-                          <!-- End Contact Info -->
-                      </div>
-                      <!-- End Contact Us -->
-                  </div>
-                  <!-- End Col -->
-              </div>
-              <!-- End Contact Row -->
-            
-              <!-- End Row -->
-          </div>
-          <!-- End Col -->
-      </div>
-      <!-- End Widget Row -->
-  </div>
-  <!-- End Contact Container -->
-
-
-  <div class="copyright">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-6">
-                  <span><p class="footer">2021 &copy; all rights reserved</p>
-                  </span>
-              </div>
-              <!-- End Col -->
-              <div class="col-md-6">
-                  <div class="copyright-menu">
-                      <ul>
-                          <li>
-                              <a routerLink="/home">Home</a>
-                          </li>
-                          <li>
-                              <a href="#">Terms</a>
-                          </li>
-                          <li>
-                              <a href="#">Privacy Policy</a>
-                          </li>
-                          <li>
-                              <a routerLink="contact">Contact</a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <!-- End col -->
-          </div>
-          <!-- End Row -->
-      </div>
-      <!-- End Copyright Container -->
-  </div>
-  <!-- End Copyright -->
-  <!-- Back to top -->
-  <div id="back-to-top" class="back-to-top">
-      <button class="btn btn-dark" title="Back to Top" style="display: block;">
-          <i class="fa fa-angle-up"></i>
-      </button>
-  </div>
-  <!-- End Back to top -->
-</footer>
-
-
-<!-- Credit to https://bootsnipp.com/snippets/ooa9M -->
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+<div class="footer"> 2021 &copy; all rights reserved</div>
