--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -214,7 +214,7 @@
                                         SOLD
                                       </p>
                                 </td>
-                                <td>{{event?.price | currency : 'TND': true}}</td>
+                                <td>{{event?.price | currency : 'TND': 'symbol'}}</td>
                                 <td><img [src]="event.photo" width="50px" height="50px" alt=""></td>
                                 <td>
                                     <button type="button" class="btn btn-warning text-white" data-toggle="modal"
