--- a/src/app/home/footer/footer.component.css
+++ b/src/app/home/footer/footer.component.css
@@ -82,8 +82,15 @@ p {
 .dk-footer {
   padding: 75px 0 0;
   background-color: #151414;
-  position: relative;
-  z-index: 2; }
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+ 
+  text-align: center;
+  /* position: relative; */
+  z-index: 2; 
+}
   .dk-footer .contact-us {
     margin-top: 0;
     margin-bottom: 30px;
