--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -104,12 +104,9 @@
                               <a routerLink="/home">Home</a>
                           </li>
                           <li>
-                              <a href="#">Terms</a>
+                              <a routerLink="/events">Events</a>
                           </li>
-                          <li>
-                              <a href="#">Privacy Policy</a>
-                          </li>
-                          <li>
+                           <li>
                               <a routerLink="contact">Contact</a>
                           </li>
                       </ul>
