--- a/src/app/home/footer/footer.component.css
+++ b/src/app/home/footer/footer.component.css
@@ -59,12 +59,13 @@
     width: 80%; } } 
 
 .dk-footer {
-  padding: 75px 0 0;
+  padding: 10px 0 0;
   background-color: #151414;
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: auto;
  
   text-align: center;
   /* position: relative; */
@@ -394,5 +395,6 @@ height: 100%;
 } */
 
 /* Credit to https://bootsnipp.com/snippets/M56El  */    
+/* body {
   z-index: 100;
-}
+} */
