--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -104,7 +104,7 @@
                               <a routerLink="/home">Home</a>
                           </li>
                           <li>
-                              <a routerLink="/events">Events</a>
+                              <a routerLink="events">Events</a>
                           </li>
                            <li>
                               <a routerLink="contact">Contact</a>
