--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -121,7 +121,7 @@
   <!-- End Copyright -->
   <!-- Back to top -->
   <div id="back-to-top" class="back-to-top">
-      <button class="btn btn-dark" title="Back to Top" style="display: block;">
+      <button class="btn btn-dark" title="Back to Top" (click)="onActivate($event)" style="display: block;">
           <i class="fa fa-angle-up"></i>
       </button>
   </div>
