--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<app-navbar></app-navbar>
+<div class="home-container">
+    <app-navbar></app-navbar>
     <router-outlet></router-outlet>
-<app-footer ></app-footer>
+    <app-footer (activate)="onActivate($event)"></app-footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
